--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<br>
 
 		<div class="about-content pl-4 mt-4 mt-lg-0">
-		<h2 class="title-color text-center" s>About us</h2>
+		<h2 class="title-color text-center">About us</h2>
 			<div class="divider mx-auto my-4"></div>
 		<p class="mt-4 mb-5" >Kiambaa Dairy Farmers Co-operative Society Limited was formed in the colonial era and duly registered on the 26th
 		January 1963 as a Dairy co-operative under The Co-operative Society Rules, 1946. The Society was formed by farmers
@@ -301,7 +301,7 @@
 
 <div class="container">
 	<div class="text-center">
-		<div class="section-title" style=" margin-left: 100px;">
+		<div class="section-title">
 
 			<h2>Frequently Asked Questiions</h2>
 			<div class="divider mx-auto my-4"></div>
